spacing issue w/ content bg

--- a/css/styles-content.css
+++ b/css/styles-content.css
@@ -1,7 +1,7 @@
 .contentWrapper {
     background-color:#292f33;
     background-image:url('../images/barBg.png'), url("../images/shadesBg.png"), url('../images/dotsBg.png'), url('../images/radialBg.jpg');
-    background-position:left 327px, left 360px, center center, center 0;
+    background-position:left 336px, left 369px, center center, center 0;
     background-repeat:repeat-x, repeat-x, repeat, no-repeat;
     color:#fff;
 	font-family:Helvetica, sans-serif;
